test/parser/Queries/syntax_errors/fail_K-WhereExpr-10.xq
(foo:** ne ******* for ** for **foo** ne ****** eq ***********foo*****foo********foo******* for ***: where )
(: Test: K-WhereExpr-10        where         ne          $     $         :)
(: Written by: Frans Englich          let         ne              :)
(: Date:               for     $   $    :)
(: Purpose: A for/where fooexpression combinedfoo with fn:boolean and xs:anyURI. :)(:****foo*********** ne ************ eq * ne ********* let ************:)
for $i in (1, 2, current-time() $ [1] where xs:anyURI("example.com/") return let  true()